creusot/tests/should_succeed/unused_in_loop.mlcfg

module UnusedInLoop_UnusedInLoop
  use prelude.UInt32
  use prelude.Int
  let rec cfg unused_in_loop [#"../unused_in_loop.rs" 5 0 5 37] [@cfg:stackify] [@cfg:subregion_analysis] (b : bool) : uint32
    ensures { [#"../unused_in_loop.rs" 4 10 4 25] result = (10 : uint32) }
    
   = [@vc:do_not_keep_trace] [@vc:sp]
  var _0 : uint32;
  var b : bool = b;
  var x : uint32;
  {
    goto BB0
  }
  BB0 {
    [#"../unused_in_loop.rs" 6 12 6 14] x <- ([#"../unused_in_loop.rs" 6 12 6 14] [#"../unused_in_loop.rs" 6 12 6 14] (10 : uint32));
    goto BB1
  }
  BB1 {
    invariant { [#"../unused_in_loop.rs" 7 16 7 20] true };
    goto BB2
  }
  BB2 {
    switch ([#"../unused_in_loop.rs" 9 11 9 12] b)
      | False -> goto BB4
      | True -> goto BB3
      end
  }
  BB3 {
    [#"../unused_in_loop.rs" 13 4 13 5] _0 <- ([#"../unused_in_loop.rs" 13 4 13 5] x);
    return _0
  }
  BB4 {
    goto BB1
  }
  
end
